biocbook: fix aesthetics

--- a/inst/index.qmd
+++ b/inst/index.qmd
@@ -8,12 +8,31 @@ intro <- tryCatch(
         version <- description$Version
         authors <- eval(parse(text = description$Authors))
         license <- description$License
+        glue::glue(
+            "**Package:** {pkg}<br/>\n", 
+            "**Authors:<br/>** {
+                authors |> 
+                    format(include = c('given', 'family', 'role')) |> 
+                    paste('- ', x = _) |> 
+                    paste(collapse = '<br/> ')
+            }<br/>\n", 
+            "**Compiled:** {as.character(Sys.Date())}<br/>\n", 
+            "**Package version:** {version}<br/>\n", 
+            "**R version:** <b style='color:red;'>{R.version.string}</b><br/>\n", 
+            "**BioC version:** <b style='color:red;'>{BiocManager::version()}</b><br/>\n", 
+            "**License:** {license}<br/>"
+        )
     }, 
     error = function(e) {"Local preview"}
 )
 ```
 
+
+::: {layout-ncol=2}
 `r intro`
+
+![](assets/cover.png)
+:::
 
 # Welcome {-}
 
