--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -5,15 +5,17 @@ library(rebook)
 chapterPreamble()
 ```
 
-<img src="images/mia_logo.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
+::: {layout-ncol=2}
+<img src="images/mia_logo.png" width="50%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
+
+<img src="images/ecosystem.png" width="70%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
+:::
 
 The Bioconductor microbiome data science framework consists of:
 
 - **data containers**, designed to organize multi-assay microbiome data
 - **R/Bioconductor packages** that provide dedicated methods 
 - **community** of users and developers 
-
-<img src="images/ecosystem.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
 
 This section provides an overview of the package ecosystem. 
 [@sec-example-data] links to various open microbiome data resources
