biocbook: add callout acknowledging miaverse in walcome page

--- a/inst/index.qmd
+++ b/inst/index.qmd
@@ -36,6 +36,16 @@ intro <- tryCatch(
 
 # Welcome {-}
 
+::: {.callout-warning icon='true'}
+
+## Important!
+
+This is a development version of the [**Orchestrating Microbiome Analysis
+with Bioconductor**](https://microbiome.github.io/OMA/) [@OMA] book from the
+the [*miaverse*](https://microbiome.github.io). 
+
+:::
+
 You are reading the online book, [**Orchestrating Microbiome Analysis
 with Bioconductor**](https://microbiome.github.io/OMA/) [@OMA], where we
 walk through common strategies and workflows in microbiome data
