--- a/book.bib
+++ b/book.bib
@@ -1438,6 +1438,17 @@ year = {2005}
 }
 
 
+@article{yoon2021fast,
+  title={Fast computation of latent correlations},
+  author={Yoon, Grace and M{\"u}ller, Christian L and Gaynanova, Irina},
+  journal={{Journal of Computational and Graphical Statistics}},
+  volume={30},
+  number={4},
+  pages={1249--1256},
+  year={2021}
+}
+
+
 @article{peschel2021netcomi,
     author = {Peschel, Stefanie and M{\"{u}}ller, Christian L and von Mutius, Erika and Boulesteix, Anne-Laure and Depner, Martin},
     title = {{NetCoMi: network construction and comparison for microbiome data in R}},
