biocbook: replace `js2264` by `microbiome`

--- a/inst/index.qmd
+++ b/inst/index.qmd
@@ -90,7 +90,7 @@ Attribution-NonCommercial
 
 A `Docker` image built from this repository is available here: 
 
-👉 [ghcr.io/js2264/oma](https://ghcr.io/js2264/oma) 🐳
+👉 [ghcr.io/microbiome/oma](https://ghcr.io/microbiome/oma) 🐳
 
 ::: {.callout-tip icon='true'}
 ## Get started now 🎉
@@ -100,7 +100,7 @@ using this command in a terminal:
 
 ```{sh "docker", filename="bash"}
 #| eval: false
-docker run -it ghcr.io/js2264/oma:devel R
+docker run -it ghcr.io/microbiome/oma:devel R
 ```
 
 :::
@@ -115,7 +115,7 @@ docker run \
     --volume <local_folder>:<destination_folder> \
     -e PASSWORD=OHCA \
     -p 8787:8787 \
-    ghcr.io/js2264/oma:devel
+    ghcr.io/microbiome/oma:devel
 ```
 
 The initiated RStudio Server instance will be available at 
