--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -80,6 +80,9 @@ key authors/contributors include:
 
 - *Lu Yang* 
 
+- *Jacques Serizay* converted the _OMA_ book to the `BiocBook` format. This 
+allows the _OMA_ book to be built and distributed by Bioconductor. 
+
 ### Acknowledgments {-}
 
 This work would not have been possible without the countless
