--- a/inst/pages/61_network_comparison.qmd
+++ b/inst/pages/61_network_comparison.qmd
@@ -9,10 +9,11 @@ chapterPreamble()
 # The networks shown in this chapter take several minutes to generate. 
 # Therefore, the network objects have been stored in a folder and are loaded 
 # here to reduce the time needed to knit the book.
-load("general/network_data/networks_diet.RData")
+networks_diet_file  <- system.file("extdata", "networks_diet.RData", package = "OMA")
+load(networks_diet_file)
 ```
 
-This chapter assumes that you are already familiar with how to construct and analyze a single microbial network, which is explained in Chapter \@ref(network-learning).
+This chapter assumes that you are already familiar with how to construct and analyze a single microbial network, which is explained in Chapter [@sec-network-learning].
 
 Since microbial interactions are likely to change between conditions, such as between patients and healthy individuals or between different environmental states, identifying network differences between groups is often an integral secondary analysis step. Differences can be detected visually by plotting the networks side by side, or quantitatively using differential network analysis tools.
 
@@ -21,15 +22,15 @@ Two approaches for comparing networks between two conditions are considered in t
 - **Differential network analysis**, which analyzes differences in network metrics and network structure. 
 - **Differential association analysis**, which focuses on differences in the strength of individual associations.
 
-See Section \@ref(netcomp-methods) for further details on these two approaches and the methods used in this chapter.
+See Section [@sec-netcomp-methods] for further details on these two approaches and the methods used in this chapter.
 
-Here we use [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] for network comparison, which includes several **differential network analysis approaches** as well as functionality for *differential association analysis**, i.e., generating a differential network. How to install NetCoMi from GitHub is explained in chapter \@ref(network-learning). 
+Here we use [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] for network comparison, which includes several **differential network analysis approaches** as well as functionality for *differential association analysis**, i.e., generating a differential network. How to install NetCoMi from GitHub is explained in chapter [@sec-network-learning]. 
 
 The **PeerJ data set** [@potbhare2022skin] containing skin microbial profiles for 58 subjects is again used in this chapter. The dataset also includes information on the subjects' geographic location, gender, age and diet. Whether the **skin microbiome differs** between people with **different diets** is an interesting question that will be explored in this chapter.
 
 ## Data preparation
 
-We perform the same data preprocessing steps as in chapter \@ref(network-learning).
+We perform the same data preprocessing steps as in chapter [@sec-network-learning].
 
 ```{r load_packages, message=FALSE, warning=FALSE}
 library(NetCoMi)
@@ -118,7 +119,7 @@ We notice some differences in the network properties. The differential network a
 
 ### Visual comparison
 
-We start with a visual comparison of the two networks using NetCoMi's plot function. The same configuration as in chapter \@ref(network-learning) is used.
+We start with a visual comparison of the two networks using NetCoMi's plot function. The same configuration as in chapter [@sec-network-learning] is used.
 
 ```{r network_plot_diet_difflay, fig.width=17, fig.height=8}
 plot(spring_netprops_diet,
@@ -182,7 +183,7 @@ legend(-0.2, -0.8, cex = 1.7, title = "estimated correlation:",
 -   Clusters must share at least two nodes (`sameColThresh` argument) to be colored equally in both networks, which is why the color of some clusters differs between the groups.
 -   The clustering generally differs markedly. In particular, the cluster assignment of many of the nodes in the largest connected component differs between the two groups.
 
-As in Chapter \@ref(network-learning), we also generate a network plot using phylum names to color the nodes and mclr-transformed abundances to scale node sizes.
+As in Chapter [@sec-network-learning], we also generate a network plot using phylum names to color the nodes and mclr-transformed abundances to scale node sizes.
 
 ```{r, message=FALSE, warning=FALSE}
 library(RColorBrewer)
@@ -317,7 +318,7 @@ save(spring_diffnet, spring_net_diet, spring_netcomp_diet,
 ```
 
 
-## Network comparison methods {#netcomp-methods}
+## Network comparison methods {#sec-netcomp-methods}
 
 While many approaches exist for the detection of **differential correlations**, e.g. [@yu2019new; @mckenzie2016dgca; @siska2017differential], the literature on the more general case of **differential association** detection is scarce. @bhuva2019differential compare various methods in a simulation study, which again includes many differential correlation approaches, but also more general methods such as latent differential graphical models. @gill2010statistical introduce an approach to analyze whether the connectivity of individual nodes is different between two groups using permutation tests, which is applicable to any kind of association. @he2019statistical propose a test to infer the differential network structure for two conditional dependence networks.
 
