--- a/inst/pages/60_network_learning.qmd
+++ b/inst/pages/60_network_learning.qmd
@@ -1,4 +1,4 @@
-# Network learning and analysis {#network-learning}
+# Network learning and analysis {#sec-network-learning}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -9,23 +9,24 @@ Learning and analyzing microbial association networks is another common explorat
 
 A typical workflow for estimating a microbial network involves several steps, including data preprocessing, estimating microbial associations, and transforming them into edge weights. The resulting network can be analyzed using local network properties, such as centrality measures, or global measures that describe the overall structure of the network. Network plots provide further insight into the microbial community structure and allow for exploratory analysis of microbial relationships.
 
-In this chapter, we go through the complete workflow of constructing and analyzing a single microbial network, step by step. A potential next analysis task is to compare networks between groups, such as patients and controls, different environmental conditions, or different time points. How to compare networks between two groups is explained in chapter \@ref(network-comparison)
+In this chapter, we go through the complete workflow of constructing and analyzing a single microbial network, step by step. A potential next analysis task is to compare networks between groups, such as patients and controls, different environmental conditions, or different time points. How to compare networks between two groups is explained in [@network-comparison].
 
 ## Network learning
 
-### Typical workflow {#network-learning-workflow}
+### Typical workflow {#sec-network-learning-workflow}
 
-Figure \@ref(fig:network-workflow) shows the workflow for learning/constructing a microbial association network as proposed by @peschel2021netcomi. The respective steps are explained below.
+Figure [@fig-network-workflow] shows the workflow for learning/constructing a microbial association network as proposed by @peschel2021netcomi. The respective steps are explained below.
 
 ```{r network-workflow, echo=FALSE, out.width='100%', fig.cap='The typical input is a $p$ x $n$ dimensional count matrix coming from a sequencing process, where $n$ is the number of samples and $p$ the number of features / ASVs / OTUs. Steps 1 through 6 are explained below. Each matrix resulting from steps 4, 5, and 6 plays a specific role in the final network: The adjacency matrix is used for edge colors, dissimilarity for layout, and similarity for edge weights. In weighted networks, the similarity matrix equals the adjacency matrix.'}
-knitr::include_graphics("general/figures/FigureNetworkLearning.png")
+#| label: fig-network-workflow
+knitr::include_graphics("images/FigureNetworkLearning.png")
 ```
 
 1.  **Zero replacement:** Since the following steps usually require non-zero entries in the read count matrix, zero counts must be replaced. A simple solution is to add a pseudo count to the data. Other possible approaches are implemented in the R package [zCompositions](https://cran.r-project.org/web/packages/zCompositions/index.html)
 
 2.  **Normalization:** To avoid compositional effects, the data are normalized using a compositionality aware transformation. A common approach is the centered log-ratio (clr) transformation, which moves the data from a $p$-dimensional simplex to Euclidean space so that standard statistical analysis methods are valid. A variance stabilizing transformation (vst) is also a suitable approach for normalizing microbial count data [@badri2020shrinkage].
 
-3.  **Association estimation:** This is the crucial step in network learning to obtain statistical relations between the taxa. Common association measures include correlation, conditional dependence (which we will equate to partial correlation), and proportionality. Further information on these three types of association and their application can be found in Section \@ref(more-about-association). The following list gives a selection of compositionality aware approaches:
+3.  **Association estimation:** This is the crucial step in network learning to obtain statistical relations between the taxa. Common association measures include correlation, conditional dependence (which we will equate to partial correlation), and proportionality. Further information on these three types of association and their application can be found in Section [@sec-more-about-association]. The following list gives a selection of compositionality aware approaches:
     + **Compositionality aware correlation estimation methods:**
       -   Pearson's correlation coefficient (+ normalization)
       -   Spearman's rank correlation coefficient (+ normalization)
@@ -54,7 +55,7 @@ knitr::include_graphics("general/figures/FigureNetworkLearning.png")
 
 The main association measure used in this chapter is the [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") method proposed by @yoon2019microbial. `SPRING` learns conditional dependency graphs for compositional data and follows the neighborhood selection method introduced by @meinshausen2006high ("MB"). We will show how to apply the method directly, as well as how to use it in conjunction with the R package [NetCoMi](https://github.com/stefpeschel/NetCoMi), which is specifically designed for the construction and analysis of networks for microbiome data.
 
-See Section \@ref(more-about-association) for a comparison of all three association types (correlation, partial correlation, and proportionality) with more information on each measure and applications.
+See Section [@sec-more-about-association] for a comparison of all three association types (correlation, partial correlation, and proportionality) with more information on each measure and applications.
 
 We demonstrate the workflow using the the **PeerJ data set** [@potbhare2022skin]. It contains skin microbial profiles of 58 subjects.
 
@@ -72,7 +73,8 @@ dim(tse0)
 # The networks shown in this chapter take several minutes to generate. 
 # Therefore, the network objects have been stored in a folder and are loaded 
 # here to reduce the time needed to knit the book.
-load("general/network_data/spring_networks.RData")
+spring_networks_file  <- system.file("extdata", "spring_networks.RData", package = "OMA")
+load(spring_networks_file)
 ```
 
 ### Install packages
@@ -132,9 +134,9 @@ tse <- transformAssay(tse, method = "clr", pseudocount = 1)
 dim(tse)
 ```
 
-### SPRING network {#spring-network}
+### SPRING network {#sec-spring-network}
 
-As explained in Section \@ref(network-learning-workflow), we use [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") as association measure. We first use the `SPRING` function directly to construct a conditional dependency graph. 
+As explained in Section [@sec-network-learning-workflow], we use [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") as association measure. We first use the `SPRING` function directly to construct a conditional dependency graph. 
 
 Neither zero replacement nor normalization (steps 1 and 2 in our workflow) are required because SPRING uses a modified clr (mclr) transformation that can handle zero counts, and the correlation estimation method itself can also deal with zeros in the data. mclr is similar to the clr transformation except that mclr considers only the non-zero values. More precisely, the geometric mean is derived from positive values only, and zero counts remain zero after the transformation. This approach is similar to the "robust clr" (rclr) transformation included in the `vegan` package, except that mclr applies a positive shift to all non-zero values to make them strictly positive. See [@yoon2019microbial] for details.
 
@@ -166,11 +168,11 @@ rownames(spring_cor) <- colnames(spring_cor) <- rownames(tse)
 diag(spring_cor) <- 1
 ```
 
-As explained in Section \@ref(network-learning-workflow), the estimated associations are sparsified, transformed into dissimilarities, and finally transformed into similarities, which are the adjacency values. We write a function for these steps, which will be reused later.
+As explained in Section [@sec-network-learning-workflow], the estimated associations are sparsified, transformed into dissimilarities, and finally transformed into similarities, which are the adjacency values. We write a function for these steps, which will be reused later.
 
-Since `SPRING` already includes a sparsification approach, the `thresh` argument is not needed here, but will be needed in Section \@ref(more-about-association) for other association measures.
+Since `SPRING` already includes a sparsification approach, the `thresh` argument is not needed here, but will be needed in Section [@sec-more-about-association] for other association measures.
 
-To be consistent with the workflow, we provide two dissimilarity transformations: "signed" and "unsigned" (see Section \@ref(network-learning-workflow) for an explanation). These transformations were introduced by @vanDongen2012metric. We use the "signed" transformation in our examples so that strongly negatively associated genera have low edge weights.
+To be consistent with the workflow, we provide two dissimilarity transformations: "signed" and "unsigned" (see Section [@sec-network-learning-workflow] for an explanation). These transformations were introduced by @vanDongen2012metric. We use the "signed" transformation in our examples so that strongly negatively associated genera have low edge weights.
 
 The output of the function is an `igraph` object, which can be plotted and analyzed using functions from the `igraph` package.
 
@@ -235,9 +237,9 @@ plot(spring_graph, layout = lay_fr, vertex.size = vsize, vertex.label = NA,
      main = "Conditional dependence graph\n(generated with SPRING)")
 ```
 
-### NetCoMi network {#netcomi-spring}
+### NetCoMi network {#sec-netcomi-spring}
 
-The [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] package is specifically designed to construct, analyze, and compare networks for microbiome data and implements the complete workflow described in Section \@ref(network-learning-workflow). Instead of using several functions for each of the steps, `NetCoMi` provides a single function for network construction (`netConstruct()`), so the package streamlines the workflow considerably. The user can choose from a variety of methods for data preprocessing, association estimation, sparsification, and transformation. The returned `microNet` object can then be passed to `netAnalyze()` (the network analysis function) so that all necessary information is available for the network analysis workflow.
+The [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] package is specifically designed to construct, analyze, and compare networks for microbiome data and implements the complete workflow described in Section [@sec-network-learning-workflow]. Instead of using several functions for each of the steps, `NetCoMi` provides a single function for network construction (`netConstruct()`), so the package streamlines the workflow considerably. The user can choose from a variety of methods for data preprocessing, association estimation, sparsification, and transformation. The returned `microNet` object can then be passed to `netAnalyze()` (the network analysis function) so that all necessary information is available for the network analysis workflow.
  
 ```{r, message=FALSE, warning=FALSE}
 library(NetCoMi)
@@ -291,7 +293,7 @@ The left network constructed directly with the `SPRING()` function and the right
 save(spring_est, netcomi_net, file = "general/network_data/spring_networks.RData")
 ```
 
-## Network analysis {#network-analysis}
+## Network analysis {#sec-network-analysis}
 
 The computed network is now analyzed using appropriate methods. We will first use the `igraph` package to analyze the `SPRING` network. NetCoMi's `netAnalyze()` function will be used later to analyze the constructed `microNet` object.
 
@@ -544,7 +546,7 @@ Throughout all the steps from primary data to potentially significant network fe
 
 Therefore, the selection of the workflow building blocks should be set up once and independently of any hypothesis about the data, thus avoiding the fallacy of starting to "fish" for results that best fit a previously formulated hypothesis. For example, one should ask prior to the analysis whether correlation or conditional dependence as a measure of association better fits the research question and choose the method accordingly. Another example is the choice of transformation from estimated association to dissimilarity (i.e., "signed" or "unsigned"), which completely changes the interpretation and characteristics of the network. This choice should be made based on the research question before starting the analysis.
 
-## More about association measures {#more-about-association}
+## More about association measures {#sec-more-about-association}
 
 As mentioned in the introduction of this chapter, there are three types of association measures that are commonly used to express relationships between taxa: correlation, conditional dependence, and proportionality. Below, we provide a brief explanation of each of these measures, along with lists of available compositionality-aware approaches.
 
@@ -565,11 +567,12 @@ In this section, we provide three additional examples for constructing a network
 # The networks shown in this chapter take several minutes to generate. 
 # Therefore, the network objects have been stored in a folder and are loaded 
 # here to reduce the time needed to knit the book.
-load("general/network_data/networks.RData")
+networks_file  <- system.file("extdata", "networks.RData", package = "OMA")
+load(networks_file)
 ```
 
 
-### SparCC {#sparcc-correlation}
+### SparCC {#sec-sparcc-correlation}
 
 The first association measure we look at is SparCC ("Sparse Correlations for Compositional data"), introduced by @Friedman2012. It estimates Pearson correlations while taking into account the compositional structure of the data. The [SpiecEasi](https://rdrr.io/github/zdk123/SpiecEasi/man/sparcc.html) package provides an implementation of this method.
 
@@ -594,7 +597,7 @@ sparcc_graph04 <- sparcc_trans04$graph
 ```
 
 
-### Shrinkage proportionality {#shrinkage-prop}
+### Shrinkage proportionality {#sec-shrinkage-prop}
 
 In the second example, microbial associations are measured by proportionality, originally introduced by @lovell2015proportionality. We use the shrinkage proportionality estimator proposed by @badri2020shrinkage, which gives consistent results even for small sample sizes. Since there is no R package implementing this estimator, we use the `rho_shrink_est()` function provided in the [GitHub repository](https://github.com/MichelleBadri/NormCorr-manuscript/blob/master/code/helpers/norm_functions.R) associated with the paper. The function is slightly modified to take normalized counts as input.
 
@@ -626,7 +629,7 @@ prop_graph <- prop_trans$graph
 ```
 
 
-### SpiecEasi - MB {#spieceasi-mb}
+### SpiecEasi - MB {#sec-spieceasi-mb}
 
 As third example, we use the SpiecEasi ("Sparse InversE Covariance estimation for Ecological Association and Statistical Inference") approach proposed by @Kurtz2015 to estimate a sparse conditional dependency graph. The neighborhood selection method ("MB") introduced by @meinshausen2006high is used for network learning. The approach is implemented in the R package [SpiecEasi](https://github.com/zdk123/SpiecEasi). 
 
